//--------------------------------------------------------------------------
// Copyright 2018 Infinite Devices GmbH
// www.infinimesh.io
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.
//--------------------------------------------------------------------------

syntax = "proto3";

package pkg.s3merger.s3mergerpb;

option go_package = "s3mergerpb";
option java_multiple_files = true;
option java_outer_classname = "S3Merger1Proto";
option java_package = "com.pkg.s3merger.s3mergerpb";

message SaveDeviceStateRequest{
    string bucket = 1;
    string key = 2;
    bytes deviceState = 3;
}
message SaveDeviceStateResponse{
    bool status = 1;
}

service s3repos {
    rpc SetDeviceState(SaveDeviceStateRequest) returns (SaveDeviceStateResponse) {}
}
